Corrige menu e background no responsivo e atualiza as imagens

--- a/src/brasil/gov/paginadestaque/themes/destaques-cinza/index.html
+++ b/src/brasil/gov/paginadestaque/themes/destaques-cinza/index.html
@@ -97,7 +97,7 @@
             </div>
 
         </div>
-        <nav>
+        <nav id="navigation">
             <a name="anavigation" id="anavigation"></a>
             <span class="menuTrigger">Menu</span>
             <ul>
