Corrige Tema Cinza para funcionar com nova versao do brasil.gov.barra.

--- a/src/brasil/gov/paginadestaque/themes/destaques-cinza/index.html
+++ b/src/brasil/gov/paginadestaque/themes/destaques-cinza/index.html
@@ -408,13 +408,7 @@
 </div>
 <div id="footer" role="contentinfo">
     <a name="afooter" id="afooter"></a>
-    <div class="footer-logos">
-        <div>
-            <a href="http://www.acessoainformacao.gov.br/" class="logo-acesso">
-                <img src="img/acesso-a-infornacao.png" alt="Acesso a Informa&ccedil;&atilde;o" />
-            </a>
-        </div>
-    </div>
+    <div id="footer-brasil" class="footer-logos"></div>
 </div>
 <div id="extra-footer">
     <p>
@@ -424,5 +418,6 @@
 </div>
 
 <!-- /Footer-->
+<div id="barra_brasil_js"></div>
 </body>
 </html>
