elemento <a> com ausência de texto descritivo ajuste dos links vazios acontent, anavigation e afooter para atender os critérios de acessibilidade. Alterado h1 do logo por div para acessibilidade.

--- a/src/brasil/gov/paginadestaque/themes/destaques-cinza/index.html
+++ b/src/brasil/gov/paginadestaque/themes/destaques-cinza/index.html
@@ -98,7 +98,7 @@
 
         </div>
         <nav id="navigation">
-            <a name="anavigation" id="anavigation"></a>
+            <a name="anavigation" id="anavigation" class="anchor">menu</a>
             <span class="menuTrigger">Menu</span>
             <ul>
                 <li></li>
@@ -272,7 +272,7 @@
 
             <!-- Conteudo -->
             <div id="portal-column-content" class="cell width-1:2 position-1:4">
-                <a name="acontent" id="acontent"></a>
+                <a name="acontent" id="acontent" class="anchor">conteúdo</a>
 
                 <div class="">
 
@@ -407,7 +407,7 @@
     <div class="visualClear"></div>
 </div>
 <div id="footer" role="contentinfo">
-    <a name="afooter" id="afooter"></a>
+    <a name="afooter" id="afooter" class="anchor">footer</a>
     <div id="footer-brasil" class="footer-logos"></div>
 </div>
 <div id="extra-footer">
